Fix issue of not being able to click on mobile header

--- a/assets/sass/featured-works.sass
+++ b/assets/sass/featured-works.sass
@@ -4,7 +4,7 @@
 .featured-works
   max-width: 1200px
   margin: auto
-  padding: 1em 0
+  padding: 2em 0
 
 .title__wrapper
   display: inline-flex
