--- a/assets/sass/landing.sass
+++ b/assets/sass/landing.sass
@@ -14,7 +14,7 @@
   top: 0
   left: 0
   background-image: linear-gradient(60deg, #29323c 0%, #485563 100%)
-  z-index: 5
+  z-index: 20
 
 .container
   min-height: 600px
